add initial sending to silent payments support